product-service/deploy/local-k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
  namespace: local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
    spec:
      volumes:
        - name: init-sql
          configMap:
            name: products-init-sql
      containers:
        - name: products-service
          image: products-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
