product-service/deploy/local-k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: products-service
  namespace: local
  labels:
    app: products-service
    env: local
spec:
  parentRefs:
    - name: gateway
      namespace: local
  hostnames:
    - api.fbi.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /products
      backendRefs:
        - name: products-service
          port: 80
